almost ready backend

--- a/raect-todo/raect-todo/appsettings.json
+++ b/raect-todo/raect-todo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TodoContext": "data source=(localdb)\\MSSQLLocalDB;Initial Catalog=ReactTodo;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
