--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ node_modules
 /raect-todo/ReactTodo.Data/bin/Debug/net5.0
 /raect-todo/ReactTodo.Data/obj
 /raect-todo/.vs/raect-todo/DesignTimeBuild
+raect-todo/.vs/raect-todo/v16/.suo
+raect-todo/.vs/raect-todo/v16/TestStore/0/000.testlog
+raect-todo/.vs/raect-todo/v16/TestStore/0/testlog.manifest
+.vscode/launch.json
+.vscode
+raect-todo/.vs/raect-todo/v16/.suo
