--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ raect-todo/.vs/raect-todo/v16/TestStore/0/testlog.manifest
 .vscode/launch.json
 .vscode
 raect-todo/.vs/raect-todo/v16/.suo
+/raect-todo/ReactTodo.Tests/obj
