--- a/raect-todo/ReactTodo.Tests/ReactTodo.Tests.csproj
+++ b/raect-todo/ReactTodo.Tests/ReactTodo.Tests.csproj
@@ -7,10 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\raect-todo\ReactTodo.Api.csproj" />
+    <ProjectReference Include="..\ReactTodo.Bll\ReactTodo.Bll.csproj" />
+    <ProjectReference Include="..\ReactTodo.Data\ReactTodo.Data.csproj" />
   </ItemGroup>
 
 </Project>
