--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ raect-todo/.vs/raect-todo/v16/.suo
 /raect-todo/ReactTodo.Tests/bin/Debug/net5.0/cs
 /raect-todo/ReactTodo.Tests/bin/Debug/net5.0/de
 /raect-todo/ReactTodo.Tests/bin/Debug/net5.0
+/raect-todo/RectTodo.Test/obj
