--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@ raect-todo/.vs/raect-todo/v16/TestStore/0/testlog.manifest
 .vscode/launch.json
 .vscode
 raect-todo/.vs/raect-todo/v16/.suo
+/raect-todo/.vs/raect-todo/v16/lut/0/0
+/raect-todo/.vs/raect-todo/v16/lut/0/1
+/raect-todo/.vs/raect-todo/v16/lut
+/raect-todo/ReactTodo.Tests/bin/Debug/net5.0
+/raect-todo/ReactTodo.Tests/obj/Debug/net5.0
+/raect-todo/ReactTodo.Tests/obj
+/raect-todo/RectTodo.Test/obj
