added tests and webfactory

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ raect-todo/.vs/raect-todo/v16/.suo
 /raect-todo/ReactTodo.Tests/obj/Debug/net5.0
 /raect-todo/ReactTodo.Tests/obj
 /raect-todo/RectTodo.Test/obj
+/raect-todo/.vs/raect-todo/v16/TestStore/OutputMessages
